overflow issue solved

--- a/home.css
+++ b/home.css
@@ -18,6 +18,7 @@
     background-position: 50% 30%;
     background-size: cover;
     height: 100%;
+    overflow-x: hidden;
 }
 
 
